--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 </head>
-  <body>
+  <body id="home">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
